@@ -1,5 +1,9 @@
 2010-02-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/ModuleSyntaxChecker.hpp: fixing bug in the renaming output predicate module atom.
+	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
+	* testsuite/TestHexParserModule.cpp: Likewise.
+
 	* include/dlvhex/ModuleSyntaxChecker.hpp: implementing restriction and renaming.
 	* include/dlvhex/Atoms.hpp: Likewise.
 	* include/dlvhex/MLPSolver.hpp: Likewise.
